--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
       - name: USING ACTION TO BUILD AND PUST :)
         uses: NRO04/docker-build-push-action@v2
         with: #args for action, all of them are required
-          name-repository: 40781998/todo-frontend #repository name, specify what the repository will be called on dockerhub.
+          name-repository: todo-frontend #repository name, specify what the repository will be called on dockerhub.
           tag: latest #tag for repository
           docker-username: 40781998 #${{ secrets.DOCKER_USERNAME }} # docker account - username
           docker-password: Paul@1234
